--- a/FootballProjectedGames.ipynb
+++ b/FootballProjectedGames.ipynb
@@ -1548,7 +1548,7 @@
     "    'Tank Dell': {'games': 0, 'note': 'Out for season'},\n",
     "}\n",
     "\n",
-    "# Looping through the override_dict:\n",
+    "# Loop through the override dictionary and update the DataFrame for any matching players:\n",
     "for player, override in override_dict.items():\n",
     "    all_predictions.loc[all_predictions['Player'] == player, 'Predicted2025G'] = override['games']\n",
     "    all_predictions.loc[all_predictions['Player'] == player, 'Note'] = override['note']\n",
